[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/initCardsTutorial.gd" type="Script" id=1]
[ext_resource path="res://scripts/enemyData.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemyHealthBar.gd" type="Script" id=3]
[ext_resource path="res://scenes/ghostEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/shake.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/healthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/hero.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/cardData.gd" type="Script" id=9]
[ext_resource path="res://scenes/deployment.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sounds/ockaie_temple.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/buttonEndTurnEscuro.png" type="Texture" id=12]
[ext_resource path="res://assets/shield/shield.png" type="Texture" id=13]
[ext_resource path="res://MotherBattleBG.png" type="Texture" id=14]
[ext_resource path="res://assets/buttonEndTurn.png" type="Texture" id=15]
[ext_resource path="res://scenes/dialogueTutorial.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/dialogueTutorial.gd" type="Script" id=17]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=18]

[node name="motherLandBattle" type="Node2D"]
script = ExtResource( 1 )

[node name="shake" parent="." instance=ExtResource( 5 )]
position = Vector2( 514, 297 )
scale = Vector2( 3.4, 3.4 )
current = true

[node name="background" type="Node2D" parent="."]
position = Vector2( 0, 23 )

[node name="MotherBattleBg" type="Sprite" parent="background"]
position = Vector2( 509, 183 )
scale = Vector2( 1.3, 1.45 )
z_index = -1
texture = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="background"]
z_index = -3

[node name="ColorRect" type="ColorRect" parent="background/Sprite"]
margin_left = -35.0
margin_top = 409.0
margin_right = 1052.0
margin_bottom = 604.0
mouse_filter = 2
color = Color( 0.0901961, 0.0588235, 0.12549, 1 )

[node name="heroHealthBar" parent="." instance=ExtResource( 7 )]
margin_left = 11.0
margin_top = 32.0
margin_right = 11.0
margin_bottom = 32.0

[node name="shield" type="Sprite" parent="heroHealthBar"]
position = Vector2( 364.408, 21.3649 )
scale = Vector2( 0.111963, 0.121883 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="heroHealthBar/shield"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -249.003
margin_top = -312.414
margin_right = -223.003
margin_bottom = -281.414
rect_scale = Vector2( 20, 20 )
align = 1
valign = 1

[node name="enemyHealthBar" parent="." instance=ExtResource( 7 )]
margin_left = 1014.0
margin_top = 29.0
margin_right = 1014.0
margin_bottom = 29.0
rect_scale = Vector2( -1, 1 )
script = ExtResource( 3 )

[node name="shield" type="Sprite" parent="enemyHealthBar"]
position = Vector2( 364.408, 21.3649 )
scale = Vector2( -0.112, 0.122 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="enemyHealthBar/shield"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -249.003
margin_top = -312.414
margin_right = -223.003
margin_bottom = -281.414
rect_scale = Vector2( 20, 20 )
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_left = 849.0
margin_top = 436.0
margin_right = 1027.0
margin_bottom = 523.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="ghostEnemy" parent="." instance=ExtResource( 4 )]
self_modulate = Color( 1, 1, 1, 0.431373 )
position = Vector2( 818, 232 )
scale = Vector2( 3, 3 )
z_index = -1

[node name="hero" parent="." instance=ExtResource( 8 )]
position = Vector2( 72, 240 )
z_index = -1
sceneToGo = "res://scenes/DarkLightForest.tscn"
sceneToDie = "res://scenes/MotherLand.tscn"

[node name="trilhaSonora" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -0.81
autoplay = true
bus = "Music"

[node name="cardData" type="Label" parent="."]
margin_left = 11.0
margin_top = 94.0
margin_right = 115.0
margin_bottom = 243.0
rect_scale = Vector2( 2, 2 )
text = "Next cards:"
script = ExtResource( 9 )

[node name="enemyData" type="Label" parent="."]
margin_left = 815.0
margin_top = 85.0
margin_right = 920.001
margin_bottom = 150.0
rect_scale = Vector2( 2, 2 )
text = "Enemy Attacks:"
script = ExtResource( 2 )

[node name="gameOver" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 515, 294 )

[node name="deployment" parent="." instance=ExtResource( 10 )]

[node name="dialogueTutorial" parent="." instance=ExtResource( 16 )]
margin_left = 114.0
margin_top = 238.0
margin_right = 114.0
margin_bottom = 238.0
script = ExtResource( 17 )

[node name="CanvasLayer" parent="." instance=ExtResource( 18 )]

[connection signal="pressed" from="TextureButton" to="ghostEnemy" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton" to="dialogueTutorial" method="_on_TextureButton_pressed"]
